# C-Graphing-Library

./: CMakeLists.txt
bison/: parser.y
flex/: lexer.l
nix/: shell.nix
src/graph_feature/: static_feature.c
src/graph_feature/include/: static_feature.h
src/language/: ast.c  evaluate.c  internal_node_type.c  token.c
src/language/include/: ast.h  evaluate.h  internal_node_type.h  token.h
src/main/: main.c
